# venue-recommendation-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py
src/mcp_server/: __init__.py  exceptions.py  server.py
src/mcp_server/yelp/: __init__.py  client.py  models.py
src/venue_recommendation_agent/: agent.py  recommendation_agent.py  schemas.py  search_agent.py
src/venue_recommendation_agent/prompts/: recommendation_agent.py  search_agent.py
tests/: README.md  conftest.py  test_agent.py  test_agents_common.py  test_config.py  test_mcp_server.py  test_memory.py  test_recommendation_agent.py  test_schemas.py  test_search_agent.py  test_yelp_client.py  test_yelp_models.py
tests/integration/: test_end_to_end.py
